<resources>
    <string name="app_name">Project</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="system_intent">System Intent</string>
    <string name="open_second_activity">Open second Activity</string>
    <string name="input_text">Input text</string>
    <string name="call_friend">Call friend</string>
    <string name="share_text">Share text</string>
    <string name="input_tel">Input tel</string>
    <string name="no_message">No message</string>
    <string name="activity_not_found">Activity not found</string>
    <string name="incorrect_phone_number">Incorrect phone number</string>
</resources>