<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/explicit_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/explicit_intent_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explicit_intent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/msg_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/open_second_activity_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_second_activity"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/implicit_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/implicit_intent_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/implicit_intent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/tel_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_tel"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/call_friend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/call_friend"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/system_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/system_intent_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_intent"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/share_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_text"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="18sp" />

            <Button
                android:id="@+id/share_text_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/share_text"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>